[package]
name = "apiflow"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "apiflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
hostname = "0.4"
ts-rs = { version = "7", features = ["serde-compat"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }

[dev-dependencies]
mockall = "0.14.0"
tokio-test = "0.4.4"
wiremock = "0.6.5"

[[bench]]
name = "lua_bench"
harness = false

[dev-dependencies.criterion]
version = "0.5"
